log
Wed 20 Mar 2024 07:12:02 PM UTC: 
 tests:  0|5
total_score: 0/70
ef1257c
Wed 20 Mar 2024 07:25:09 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   51 |       push_back(L, dato);
      |       ^~~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
eefb308
Wed 20 Mar 2024 07:25:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
4829d43
Wed 20 Mar 2024 07:37:01 PM UTC: 
 exercises.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
88353e7
Wed 20 Mar 2024 07:43:52 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
a129cba
Wed 20 Mar 2024 08:14:24 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
49428eb
Wed 20 Mar 2024 08:26:29 PM UTC: 
 exercises.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
4d84374
Wed 20 Mar 2024 08:27:13 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
6d09911
Wed 20 Mar 2024 08:27:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
384f58f
Wed 20 Mar 2024 08:27:47 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
8f87c54
Wed 20 Mar 2024 08:28:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:110:10: error: unused variable ‘P3’ [-Werror=unused-variable]
  110 |   Stack* P3 = create_stack();
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
1501502
Wed 20 Mar 2024 08:28:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
5199095
Wed 20 Mar 2024 08:29:50 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:110:10: error: unused variable ‘P3’ [-Werror=unused-variable]
  110 |   Stack* P3 = create_stack();
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
4edd97a
Wed 20 Mar 2024 08:32:58 PM UTC: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  4|1
total_score: 50/70
d841c1b
Wed 20 Mar 2024 08:40:40 PM UTC: 
 exercises.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
 tests:  0|0
0910f04
